test/cli/test-generate/duplicate-rule-clone-source/clone-source-a.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-a
  namespace: default
type: Opaque
data:
  password: YWxwaGE=
