test/cli/test-generate/duplicate-rule-clone-source/clone-source-b.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-b
  namespace: default
type: Opaque
data:
  password: YmV0YQ==
