test/cli/test-generate/duplicate-rule-clone-source/cloneSourceResources-b.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-b
  namespace: default
  labels:
    allowedToBeCloned: "true"
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm

---
apiVersion: v1
kind: Secret
metadata:
  name: missing-label
  namespace: default
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
