test/cli/test-generate/duplicate-rule-clone-source/generated-a.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-a
  namespace: namespace-a
type: Opaque
data:
  password: YWxwaGE=
