test/cli/test-generate/duplicate-rule-clone-source/generated-b.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-b
  namespace: namespace-b
type: Opaque
data:
  password: YmV0YQ==
