test/cli/test-generate/duplicate-rule-clone-source/generatedResource-b.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred-b
  namespace: hello-world-namespace
  labels:
    allowedToBeCloned: "true"
type: Opaque
data:
  password: MWYyZDFlMmU2N2Rm
