test/cli/test-generate/duplicate-rule-clone-source/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world-namespace
  namespace: hello-world-namespace
  name: namespace-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-b
