test/cli/test-generate/duplicate-rule-clone-source/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy-a.yaml
- policy-b.yaml
resources:
- resource.yaml
results:
- cloneSourceResource: cloneSourceResources-a.yaml
  generatedResource: generatedResource-a.yaml
  kind: Namespace
  policy: clone-list-secrets-a
  resources:
  - hello-world-namespace
  result: pass
  rule: clone-list-labelled-secrets
- cloneSourceResource: cloneSourceResources-b.yaml
  generatedResource: generatedResource-b.yaml
  kind: Namespace
  policy: clone-list-secrets-b
  resources:
  - hello-world-namespace
  result: pass
  rule: clone-list-labelled-secrets
- cloneSourceResource: clone-source-a.yaml
  generatedResource: generated-a.yaml
  kind: Namespace
  policy: sync-secrets-a
  resources:
  - namespace-a
  result: pass
  rule: sync-image-pull-secret
- cloneSourceResource: clone-source-b.yaml
  generatedResource: generated-b.yaml
  kind: Namespace
  policy: sync-secrets-b
  resources:
  - namespace-b
  result: pass
  rule: sync-image-pull-secret
